[tool.poetry]
name = "issuetests"
version = "0.1.0"
description = ""
authors = ["ikappaki <ikappaki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "issuetests", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
basilisp = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
